# monorepo-playground

./: .gitignore  LICENSE  README.md
Social-Media-Web-Application/client/: package-lock.json  package.json
Social-Media-Web-Application/server/: package-lock.json  package.json
bokeh/scripts/docker/: Dockerfile
evershop/: package-lock.json  package.json
foodfire/: package.json
go-mod/: go.mod  go.sum
java-pom-xml/: pom.xml
js-package-lock/: package-lock.json  package.json
js-yarn-lock/: package.json
python-poetry/: pyproject.toml
