[tool.poetry]
name = "python-poetry"
version = "0.1.0"
description = ""
authors = ["Eyal Paz <eyal@ox.security>"]
readme = "README.md"
packages = [{include = "python_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "3.10"
requests = "2.1.0"
Flask = "0.12.5"
ujson = "1.35"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
aiohttp = "3.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
